Dodatni custom exceptioni, promenjeni return tipovi sa ResponseEntity<?> na definisane tipove, bacanje custom exceptiona zbog @Transactional umesto vracanja ResponseEntity, refaktorizacija klasa u paketima