@@ -1,7 +1,10 @@
 package com.mitar.dipl.service.implementation;
 
+import com.mitar.dipl.exception.custom.BadRequestException;
+import com.mitar.dipl.exception.custom.ResourceNotFoundException;
 import com.mitar.dipl.mapper.OrderItemMapper;
 import com.mitar.dipl.model.dto.order_item.OrderItemCreateDto;
+import com.mitar.dipl.model.dto.order_item.OrderItemDto;
 import com.mitar.dipl.model.entity.MenuItem;
 import com.mitar.dipl.model.entity.OrderEntity;
 import com.mitar.dipl.model.entity.OrderItem;
@@ -10,88 +13,118 @@ import com.mitar.dipl.repository.MenuItemRepository;
 import com.mitar.dipl.repository.OrderItemRepository;
 import com.mitar.dipl.repository.OrderRepository;
 import com.mitar.dipl.service.OrderItemService;
-import jakarta.transaction.Transactional;
+import com.mitar.dipl.utils.UUIDUtils;
 import lombok.AllArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
+@Slf4j
 @Transactional
 public class OrderItemServiceImpl implements OrderItemService {
 
-    private OrderItemRepository orderItemRepository;
+    private final OrderItemRepository orderItemRepository;
+    private final OrderRepository orderRepository;
+    private final MenuItemRepository menuItemRepository;
+    private final OrderItemMapper orderItemMapper;
 
-    private OrderRepository orderRepository;
-
-    private MenuItemRepository menuItemRepository;
-
-    private OrderItemMapper orderItemMapper;
-
-    private static final Logger logger = LoggerFactory.getLogger(OrderItemServiceImpl.class);
-
-
+    /**
+     * Fetches all OrderItems.
+     *
+     * @return List of OrderItemDto
+     */
     @Override
-    public ResponseEntity<?> getAllOrderItems() {
-        logger.info("Getting all OrderItems");
-        return ResponseEntity.status(HttpStatus.OK).body(orderItemRepository.findAll().stream()
+    public List<OrderItemDto> getAllOrderItems() {
+        log.info("Fetching all OrderItems.");
+        List<OrderItemDto> orderItemDtos = orderItemRepository.findAll().stream()
                 .map(orderItemMapper::toDto)
-                .toList()
-        );
+                .collect(Collectors.toList());
+        log.info("Fetched {} OrderItems.", orderItemDtos.size());
+        return orderItemDtos;
     }
 
+    /**
+     * Fetches an OrderItem by its ID.
+     *
+     * @param orderItemId The UUID of the OrderItem as a string.
+     * @return OrderItemDto
+     */
     @Override
-    public ResponseEntity<?> getOrderItemById(String orderItemId) {
-        UUID parsedOrderItemId = UUID.fromString(orderItemId);
+    public OrderItemDto getOrderItemById(String orderItemId) {
+        UUID parsedOrderItemId = UUIDUtils.parseUUID(orderItemId);
+        log.debug("Fetching OrderItem with ID: {}", parsedOrderItemId);
 
-        Optional<OrderItem> orderItem = orderItemRepository.findById(parsedOrderItemId);
-        if (orderItem.isEmpty()) {
-            logger.warn("OrderItem not found with ID: {}", orderItemId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("OrderItem not found.");
-        }
-        return ResponseEntity.status(HttpStatus.OK).body(orderItemMapper.toDto(orderItem.get()));
+        OrderItem orderItem = orderItemRepository.findById(parsedOrderItemId)
+                .orElseThrow(() -> {
+                    log.warn("OrderItem not found with ID: {}", orderItemId);
+                    return new ResourceNotFoundException("OrderItem not found with ID: " + orderItemId);
+                });
+
+        OrderItemDto orderItemDto = orderItemMapper.toDto(orderItem);
+        log.info("Fetched OrderItem: {}", orderItemDto);
+        return orderItemDto;
     }
 
+    /**
+     * Fetches OrderItems by their associated MenuItem ID.
+     *
+     * @param menuItemId The UUID of the MenuItem as a string.
+     * @return List of OrderItemDto
+     */
     @Override
-    public ResponseEntity<?> getOrderItemsByMenuItemId(String menuItemId) {
-        UUID parsedMenuItemId = UUID.fromString(menuItemId);
+    public List<OrderItemDto> getOrderItemsByMenuItemId(String menuItemId) {
+        UUID parsedMenuItemId = UUIDUtils.parseUUID(menuItemId);
+        log.debug("Fetching OrderItems with MenuItem ID: {}", parsedMenuItemId);
 
-        return ResponseEntity.status(HttpStatus.OK).body(
-                orderItemRepository.findAllByMenuItem_Id(parsedMenuItemId).stream()
-                        .map(orderItemMapper::toDto)
-                        .toList());
+        List<OrderItem> orderItems = orderItemRepository.findAllByMenuItem_Id(parsedMenuItemId);
+        List<OrderItemDto> orderItemDtos = orderItems.stream()
+                .map(orderItemMapper::toDto)
+                .collect(Collectors.toList());
+
+        if (orderItemDtos.isEmpty()) {
+            log.warn("No OrderItems found with MenuItem ID: {}", menuItemId);
+            throw new ResourceNotFoundException("No OrderItems found with MenuItem ID: " + menuItemId);
+        }
+
+        log.info("Fetched {} OrderItems with MenuItem ID: {}", orderItemDtos.size(), menuItemId);
+        return orderItemDtos;
     }
 
+    /**
+     * Creates a new OrderItem.
+     *
+     * @param orderItemCreateDto The DTO containing OrderItem creation data.
+     * @return OrderItemDto
+     */
     @Override
-    public ResponseEntity<?> createOrderItem(OrderItemCreateDto orderItemCreateDto) {
-        UUID orderId = UUID.fromString(orderItemCreateDto.getOrderId());
-        UUID menuItemId = UUID.fromString(orderItemCreateDto.getMenuItemId());
+    public OrderItemDto createOrderItem(OrderItemCreateDto orderItemCreateDto) {
+        UUID orderId = UUIDUtils.parseUUID(orderItemCreateDto.getOrderId());
+        UUID menuItemId = UUIDUtils.parseUUID(orderItemCreateDto.getMenuItemId());
 
-        Optional<OrderEntity> orderOpt = orderRepository.findById(orderId);
-        if (orderOpt.isEmpty()) {
-            logger.warn("Order not found with ID: {}", orderId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Order not found.");
-        }
+        log.debug("Attempting to create OrderItem for Order ID: {} and MenuItem ID: {}", orderId, menuItemId);
 
-        Optional<MenuItem> menuItemOpt = menuItemRepository.findById(menuItemId);
-        if (menuItemOpt.isEmpty()) {
-            logger.warn("MenuItem not found with ID: {}", menuItemId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("MenuItem not found.");
-        }
+        OrderEntity orderEntity = orderRepository.findById(orderId)
+                .orElseThrow(() -> {
+                    log.warn("Order not found with ID: {}", orderId);
+                    return new ResourceNotFoundException("Order not found with ID: " + orderId);
+                });
 
-        OrderEntity orderEntity = orderOpt.get();
-        MenuItem menuItemEntity = menuItemOpt.get();
+        MenuItem menuItemEntity = menuItemRepository.findById(menuItemId)
+                .orElseThrow(() -> {
+                    log.warn("MenuItem not found with ID: {}", menuItemId);
+                    return new ResourceNotFoundException("MenuItem not found with ID: " + menuItemId);
+                });
 
         if (!(orderEntity.getStatus().equals(Status.PENDING) || orderEntity.getStatus().equals(Status.IN_PROGRESS))) {
-            logger.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", orderId);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Order status is not PENDING or IN_PROGRESS.");
+            log.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", orderId);
+            throw new BadRequestException("Order status is not PENDING or IN_PROGRESS.");
         }
 
         Optional<OrderItem> existingOrderItemOpt = orderItemRepository.findByOrderEntityAndMenuItem(orderEntity, menuItemEntity);
@@ -100,8 +133,8 @@ public class OrderItemServiceImpl implements OrderItemService {
             existingOrderItem.setQuantity(existingOrderItem.getQuantity() + orderItemCreateDto.getQuantity());
             existingOrderItem.setPrice(orderItemCreateDto.getPrice());
             orderItemRepository.save(existingOrderItem);
-            logger.info("Updated OrderItem ID: {} for Order ID: {}", existingOrderItem.getId(), orderId);
-            return ResponseEntity.status(HttpStatus.OK).body(orderItemMapper.toDto(existingOrderItem));
+            log.info("Updated OrderItem ID: {} for Order ID: {}", existingOrderItem.getId(), orderId);
+            return orderItemMapper.toDto(existingOrderItem);
         } else {
             OrderItem newOrderItem = new OrderItem();
             newOrderItem.setPrice(orderItemCreateDto.getPrice());
@@ -109,67 +142,79 @@ public class OrderItemServiceImpl implements OrderItemService {
             newOrderItem.setOrderEntity(orderEntity);
             newOrderItem.setMenuItem(menuItemEntity);
             orderItemRepository.save(newOrderItem);
-            logger.info("Created new OrderItem ID: {} for Order ID: {}", newOrderItem.getId(), orderId);
-            return ResponseEntity.status(HttpStatus.CREATED).body(orderItemMapper.toDto(newOrderItem));
+            log.info("Created new OrderItem ID: {} for Order ID: {}", newOrderItem.getId(), orderId);
+            return orderItemMapper.toDto(newOrderItem);
         }
     }
 
+    /**
+     * Deletes an OrderItem by its ID.
+     *
+     * @param orderItemId The UUID of the OrderItem as a string.
+     * @return Success message.
+     */
     @Override
-    public ResponseEntity<?> deleteOrderItem(String orderItemId) {
-        UUID parsedOrderItemId = UUID.fromString(orderItemId);
+    public String deleteOrderItem(String orderItemId) {
+        UUID parsedOrderItemId = UUIDUtils.parseUUID(orderItemId);
+        log.debug("Attempting to delete OrderItem with ID: {}", parsedOrderItemId);
 
-        Optional<OrderItem> orderItemOpt = orderItemRepository.findById(parsedOrderItemId);
-        if (orderItemOpt.isEmpty()) {
-            logger.warn("OrderItem not found with ID: {}", orderItemId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("OrderItem not found.");
-        }
-
-        OrderItem orderItem = orderItemOpt.get();
+        OrderItem orderItem = orderItemRepository.findById(parsedOrderItemId)
+                .orElseThrow(() -> {
+                    log.warn("OrderItem not found with ID: {}", orderItemId);
+                    return new ResourceNotFoundException("OrderItem not found with ID: " + orderItemId);
+                });
 
         OrderEntity orderEntity = orderItem.getOrderEntity();
 
         if (!(orderEntity.getStatus().equals(Status.PENDING) || orderEntity.getStatus().equals(Status.IN_PROGRESS))) {
-            logger.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", orderEntity.getId());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Order status is not PENDING or IN_PROGRESS.");
+            log.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", orderEntity.getId());
+            throw new BadRequestException("Order status is not PENDING or IN_PROGRESS.");
         }
 
         orderEntity.removeOrderItem(orderItem);
-
         orderRepository.save(orderEntity);
 
-        logger.info("Deleted OrderItem ID: {} from Order ID: {}", orderItemId, orderEntity.getId());
-        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+        log.info("Deleted OrderItem ID: {} from Order ID: {}", orderItemId, orderEntity.getId());
+        return "OrderItem deleted successfully.";
     }
 
+    /**
+     * Updates an existing OrderItem.
+     *
+     * @param orderItemId          The UUID of the OrderItem as a string.
+     * @param orderItemCreateDto The DTO containing updated OrderItem data.
+     * @return OrderItemDto
+     */
     @Override
-    public ResponseEntity<?> updateOrderItem(String orderItemId, OrderItemCreateDto orderItemCreateDto) {
-        UUID parsedOrderItemId = UUID.fromString(orderItemId);
+    public OrderItemDto updateOrderItem(String orderItemId, OrderItemCreateDto orderItemCreateDto) {
+        UUID parsedOrderItemId = UUIDUtils.parseUUID(orderItemId);
+        log.debug("Attempting to update OrderItem with ID: {}", parsedOrderItemId);
 
-        Optional<OrderItem> existingOrderItemOpt = orderItemRepository.findById(parsedOrderItemId);
-        if (existingOrderItemOpt.isEmpty()) {
-            logger.warn("OrderItem not found with ID: {}", orderItemId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("OrderItem not found.");
-        }
-        OrderItem existingOrderItem = existingOrderItemOpt.get();
+        OrderItem existingOrderItem = orderItemRepository.findById(parsedOrderItemId)
+                .orElseThrow(() -> {
+                    log.warn("OrderItem not found with ID: {}", orderItemId);
+                    return new ResourceNotFoundException("OrderItem not found with ID: " + orderItemId);
+                });
 
-        UUID newMenuItemId = UUID.fromString(orderItemCreateDto.getMenuItemId());
+        UUID newMenuItemId = UUIDUtils.parseUUID(orderItemCreateDto.getMenuItemId());
+        log.debug("Updating OrderItem ID: {} to MenuItem ID: {}", orderItemId, newMenuItemId);
 
-        Optional<MenuItem> menuItemOpt = menuItemRepository.findById(newMenuItemId);
-        if (menuItemOpt.isEmpty()) {
-            logger.warn("MenuItem not found with ID: {}", newMenuItemId);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("MenuItem not found.");
-        }
-        MenuItem newMenuItem = menuItemOpt.get();
+        MenuItem newMenuItem = menuItemRepository.findById(newMenuItemId)
+                .orElseThrow(() -> {
+                    log.warn("MenuItem not found with ID: {}", newMenuItemId);
+                    return new ResourceNotFoundException("MenuItem not found with ID: " + newMenuItemId);
+                });
+
         OrderEntity currentOrderEntity = existingOrderItem.getOrderEntity();
 
         if (!currentOrderEntity.getId().toString().equals(orderItemCreateDto.getOrderId())) {
-            logger.warn("Order ID mismatch for OrderItem ID: {}", orderItemId);
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Order ID mismatch.");
+            log.warn("Order ID mismatch for OrderItem ID: {}", orderItemId);
+            throw new BadRequestException("Order ID mismatch.");
         }
 
         if (!(currentOrderEntity.getStatus().equals(Status.PENDING) || currentOrderEntity.getStatus().equals(Status.IN_PROGRESS))) {
-            logger.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", currentOrderEntity.getId());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Order status is not PENDING or IN_PROGRESS.");
+            log.warn("Order status is not PENDING or IN_PROGRESS for Order ID: {}", currentOrderEntity.getId());
+            throw new BadRequestException("Order status is not PENDING or IN_PROGRESS.");
         }
 
         boolean menuItemChanged = !existingOrderItem.getMenuItem().getId().equals(newMenuItemId);
@@ -186,28 +231,27 @@ public class OrderItemServiceImpl implements OrderItemService {
                 currentOrderEntity.removeOrderItem(existingOrderItem);
                 orderItemRepository.delete(existingOrderItem);
 
-                logger.info("Merged OrderItem ID: {} into existing OrderItem ID: {} in Order ID: {}",
+                log.info("Merged OrderItem ID: {} into existing OrderItem ID: {} in Order ID: {}",
                         existingOrderItem.getId(), duplicateOrderItem.getId(), currentOrderEntity.getId());
 
-                return ResponseEntity.status(HttpStatus.OK).body(orderItemMapper.toDto(duplicateOrderItem));
+                return orderItemMapper.toDto(duplicateOrderItem);
             } else {
                 existingOrderItem.setMenuItem(newMenuItem);
                 existingOrderItem.setQuantity(orderItemCreateDto.getQuantity());
                 existingOrderItem.setPrice(orderItemCreateDto.getPrice());
                 orderItemRepository.save(existingOrderItem);
-                logger.info("Updated MenuItem for OrderItem ID: {} to MenuItem ID: {}",
+                log.info("Updated MenuItem for OrderItem ID: {} to MenuItem ID: {}",
                         existingOrderItem.getId(), newMenuItemId);
-                return ResponseEntity.status(HttpStatus.OK).body(orderItemMapper.toDto(existingOrderItem));
+                return orderItemMapper.toDto(existingOrderItem);
             }
         } else {
             existingOrderItem.setQuantity(orderItemCreateDto.getQuantity());
             existingOrderItem.setPrice(orderItemCreateDto.getPrice());
 
             OrderItem updatedOrderItem = orderItemRepository.save(existingOrderItem);
-            logger.info("Updated OrderItem ID: {}", updatedOrderItem.getId());
+            log.info("Updated OrderItem ID: {}", updatedOrderItem.getId());
 
-            return ResponseEntity.status(HttpStatus.OK).body(orderItemMapper.toDto(updatedOrderItem));
+            return orderItemMapper.toDto(updatedOrderItem);
         }
     }
-
 }
